web-infras/parser/tests/fixtures/babel/es2015/array-rest-spread/comma-after-rest/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,8)
1|[...a,] = [];
 |      ^
